@@ -355,7 +355,8 @@ xfce_menu_merger_run (XfceMenuMerger *merger,
 
   xfce_menu_merger_clean_up_elements (merger->priv->menu, XFCE_MENU_NODE_TYPE_DELETED);
   xfce_menu_merger_clean_up_elements (merger->priv->menu, XFCE_MENU_NODE_TYPE_ONLY_UNALLOCATED);
-  
+  xfce_menu_merger_clean_up_elements (merger->priv->menu, XFCE_MENU_NODE_TYPE_LAYOUT);
+
   g_list_foreach (context.file_stack, (GFunc) g_object_unref, NULL);
   g_list_free (context.file_stack);
 
@@ -933,6 +934,12 @@ xfce_menu_merger_clean_up_elements (GNode            *node,
       if (type == XFCE_MENU_NODE_TYPE_ONLY_UNALLOCATED
           && xfce_menu_node_tree_get_node_type (node) != XFCE_MENU_NODE_TYPE_ONLY_UNALLOCATED
           && xfce_menu_node_tree_get_node_type (node) != XFCE_MENU_NODE_TYPE_NOT_ONLY_UNALLOCATED)
+        {
+          continue;
+        }
+      
+      if (type == XFCE_MENU_NODE_TYPE_LAYOUT 
+          && xfce_menu_node_tree_get_node_type (child) != XFCE_MENU_NODE_TYPE_LAYOUT)
         {
           continue;
         }
